# drf-social-oauth2

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.rst  SECURITY.md  api.yaml  components.sh  docker-compose.tests.yml  manage.py  manage_test.py  pyproject.toml  pytest.ini  requirements.test.txt  requirements.txt  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codecov.yml  pythonapp.yml
docs/source/: application.rst  authenticating.rst  conf.py  customization.rst  index.rst  installation.rst  integration.rst  openapi-specs.rst  setup-testing.rst  tests.rst
drf_social_oauth2/: __init__.py  authentication.py  backends.py  oauth2_backends.py  oauth2_endpoints.py  oauth2_grants.py  serializers.py  settings.py  test_settings.py  urls.py  views.py
drf_social_oauth2/management/commands/: createapp.py
tests/: conftest.py
tests/drf_social_oauth2/: drf_fixtures.py  test_authentication.py  test_oauth2_endpoints.py  test_refresh_token_rotation.py  test_views.py
