[project]
name = "drf-social-oauth2"
requires-python = ">=3.10"

[tool.black]
include = '\.pyi?$'
skip-string-normalization = true
target-version = ['py310', 'py311', 'py312', 'py313']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
